Add more charts, alerts, command
